# Metaflow

./: README.md
metaflow/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
metaflow/.github/: PULL_REQUEST_TEMPLATE.md
metaflow/.github/ISSUE_TEMPLATE/: bug_report.md
metaflow/.github/workflows/: ci.yml  docs.yml  release.yml
metaflow/docker/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
metaflow/docs/: api.md  configuration.md  index.md  quickstart.md
metaflow/examples/: README.md  __init__.py  aggregation_pipeline.py  batch_pipeline.py  end_to_end_pipeline.py  incremental_pipeline.py  masking_pipeline.py  multi_source_pipeline.py  quality_pipeline.py  streaming_pipeline.py
metaflow/metaflow/: __init__.py  __version__.py  cli.py
metaflow/metaflow/core/: __init__.py  metadata_extractor.py  pipeline_generator.py  schema_generator.py  type_mapper.py
metaflow/metaflow/runners/: README.md  __init__.py  base_runner.py  batch_runner.py  incremental_runner.py  streaming_runner.py
metaflow/metaflow/sinks/: README.md  __init__.py  api_sink.py  base_sink.py  delta.py  delta_sink.py  file_sink.py  jdbc_sink.py  kafka_sink.py
metaflow/metaflow/sources/: README.md  __init__.py  api_source.py  base_source.py  delta_source.py  file_source.py  jdbc_source.py  kafka.py  parquet.py
metaflow/metaflow/transformers/: README.md  (+9 more)
metaflow/tests/: conftest.py  test_metadata_extractor.py  test_pipeline_generator.py
(+12 files in other folders)
